--- a/GK2_TrianglesFiller/MainWindow.xaml
+++ b/GK2_TrianglesFiller/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:GK2_TrianglesFiller"
         xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="GK2_TrianglesFiller.MainWindow"
         mc:Ignorable="d"
-        Title="Triangles filler" Height="720" Width="1280" Loaded="MetroWindow_Loaded" MinWidth="320" MinHeight="240">
+        Title="Triangles filler" Height="720" Width="1280" Loaded="MetroWindow_Loaded" MinWidth="640" MinHeight="360">
     <DockPanel x:Name="MainPanel">
 
         <Controls:MetroTabControl Width="191.5" HorizontalAlignment="Left">
@@ -36,8 +36,8 @@
                         <RadioButton GroupName="{Binding ObjectColorGroup}" x:Name="RadioObjectColor2" Content="RadioTwo" DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </DockPanel>
                     <DockPanel Grid.Column="1" Grid.Row="1">
-                        <Label Content="Label" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
-                        <xctk:ColorPicker HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" Padding="0,0,-1,0" Margin="10,0,0,0"/>
+                        <Label Content="Color" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
+                        <xctk:ColorPicker HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" Padding="0,0,-1,0" Margin="10,0,0,0" UseLayoutRounding="False"/>
                     </DockPanel>
                     <DockPanel Grid.Column="1" Grid.Row="2">
                         <Label Content="Label" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
@@ -53,9 +53,9 @@
 
                     <StackPanel Grid.Column="1" Grid.Row="4" Grid.RowSpan="2">
                         <Label Content="Label" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
-                        <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor1" Content="RadioOne" HorizontalAlignment="Left" Height="33" Margin="38.4,0,0,0"/>
-                        <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor2" Content="RadioTwo" HorizontalAlignment="Left" DockPanel.Dock="Top" Height="33" Margin="38.791,0"/>
-                        <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor3" Content="RadioThree" Height="33" Margin="38,0,31.11,0"/>
+                        <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor1" Content="RadioOne" HorizontalAlignment="Center" Height="33" Margin="38.792,0,19.2,0" Width="95.208"/>
+                        <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor2" Content="RadioTwo" HorizontalAlignment="Center" DockPanel.Dock="Top" Height="33" Margin="38.791,0"/>
+                        <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor3" Content="RadioThree" Height="33" Margin="38,0,31.11,0" HorizontalAlignment="Center"/>
                         <!-- TODO: Sliders -->
                     </StackPanel>
 
@@ -69,6 +69,6 @@
             </TabItem>
         </Controls:MetroTabControl>
 
-        <Canvas x:Name="MainCanvas" Margin="0,10,0,0" SizeChanged="MainCanvas_SizeChanged"/>
+        <Canvas x:Name="MainCanvas" Margin="20,20,0,0" SizeChanged="MainCanvas_SizeChanged"/>
     </DockPanel>
 </Controls:MetroWindow>
