--- a/GK2_TrianglesFiller/MainWindow.xaml
+++ b/GK2_TrianglesFiller/MainWindow.xaml
@@ -7,15 +7,15 @@
         xmlns:local="clr-namespace:GK2_TrianglesFiller"
         xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="GK2_TrianglesFiller.MainWindow"
         mc:Ignorable="d"
-        Title="Triangles filler" Height="720" Width="1280" Loaded="MetroWindow_Loaded" MinWidth="640" MinHeight="360">
+        Title="Triangles filler" Height="900" Width="1600" Loaded="MetroWindow_Loaded" MinWidth="640" MinHeight="360" WindowStartupLocation="CenterScreen">
     <DockPanel x:Name="MainPanel">
 
-        <Controls:MetroTabControl Width="191.5" HorizontalAlignment="Left">
+        <Controls:MetroTabControl Width="291" HorizontalAlignment="Left">
             <TabItem Header="Configuration" HorizontalAlignment="Left" Width="192" Margin="0,0,-87,0">
                 <Grid OpacityMask="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" Background="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}" Margin="0,10,0,0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="8*" />
+                        <ColumnDefinition Width="12*" />
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -29,14 +29,12 @@
                     </Grid.RowDefinitions>
 
                     <DockPanel Grid.Column="1" Grid.Row="0">
-
                         <Label Content="Label" Height="50" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
-
                         <RadioButton  GroupName="{Binding ObjectColorGroup}" x:Name="RadioObjectColor1" Content="RadioOne" DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         <RadioButton GroupName="{Binding ObjectColorGroup}" x:Name="RadioObjectColor2" Content="RadioTwo" DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </DockPanel>
                     <DockPanel Grid.Column="1" Grid.Row="1">
-                        <Label Content="Color" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
+                        <Label Content="Light color" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
                         <xctk:ColorPicker HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" Padding="0,0,-1,0" Margin="10,0,0,0" UseLayoutRounding="False"/>
                     </DockPanel>
                     <DockPanel Grid.Column="1" Grid.Row="2">
@@ -51,24 +49,48 @@
                         <RadioButton GroupName="{Binding VectorGroup}" x:Name="RadioVector2" Content="RadioTwo" DockPanel.Dock="Top" HorizontalAlignment="Center" RenderTransformOrigin="0.636,0.257"/>
                     </DockPanel>
 
-                    <StackPanel Grid.Column="1" Grid.Row="4" Grid.RowSpan="2">
-                        <Label Content="Label" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
+                    <StackPanel Grid.Column="1" Grid.Row="4" Grid.RowSpan="2" VerticalAlignment="Top">
+                        <Label Content="Fill color" Height="41" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
                         <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor1" Content="RadioOne" HorizontalAlignment="Center" Height="33" Margin="38.792,0,19.2,0" Width="95.208"/>
                         <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor2" Content="RadioTwo" HorizontalAlignment="Center" DockPanel.Dock="Top" Height="33" Margin="38.791,0"/>
                         <RadioButton GroupName="{Binding FillColorGroup}" x:Name="RadioFillColor3" Content="RadioThree" Height="33" Margin="38,0,31.11,0" HorizontalAlignment="Center"/>
                         <!-- TODO: Sliders -->
                     </StackPanel>
 
-                    <DockPanel Grid.Column="1" Grid.Row="6">
-                        <Label Content="Label" Height="40" DockPanel.Dock="Top" VerticalAlignment="Center" FontSize="18" UseLayoutRounding="False" VerticalContentAlignment="Center"/>
-                        <RadioButton GroupName="{Binding FactorsGroup}" x:Name="RadioFactors1" Content="Same" DockPanel.Dock="Top" VerticalAlignment="Center" RenderTransformOrigin="1.56,0.657" Width="68"/>
-                        <RadioButton GroupName="{Binding FactorsGroup}" x:Name="RadioFactors2" Content="Random" DockPanel.Dock="Top" Height="36.833" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="-0.197,0.756"/>
-                    </DockPanel>
+                    <Grid Grid.Column="1" Grid.Row="5" Margin="0,57,0,0" Grid.RowSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="8*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="2*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="1*" />
+                        </Grid.RowDefinitions>
+
+                        <Label Content="Coefficients" Grid.ColumnSpan="4" VerticalAlignment="Center" FontSize="18"  VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+
+                        <RadioButton Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" GroupName="{Binding FactorsGroup}" x:Name="RadioFactors1" Content="Same" HorizontalAlignment="Left"/>
+                        <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Content="Kd"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="0" HorizontalAlignment="Center" />
+                        <Slider  Grid.Row="2" Grid.Column="3" Width="121" Margin="0" Height="24" Maximum="1" SmallChange="0.01" LargeChange="0.1" TickFrequency="0.1" TickPlacement="TopLeft" Value="0.5"/>
+                        <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"  Content="Ks" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center"  />
+                        <Slider Grid.Row="3" Grid.Column="3" Width="121" Margin="0" Maximum="1" SmallChange="0.01" Value="0.5" TickFrequency="0.1" LargeChange="0.1" TickPlacement="TopLeft"/>
+                        <Label Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"  Content="Specularity"  Padding="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center"/>
+                        <Slider  Grid.Row="4" Grid.Column="3" Width="121" Margin="0" Minimum="1" LargeChange="5" SmallChange="1" TickFrequency="0.1" Value="10"/>
+
+                        <RadioButton Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" GroupName="{Binding FactorsGroup}" x:Name="RadioFactors2" Content="Random"  HorizontalAlignment="Left"   />
+                    </Grid>
+
                 </Grid>
 
             </TabItem>
         </Controls:MetroTabControl>
 
-        <Canvas x:Name="MainCanvas" Margin="20,20,0,0" SizeChanged="MainCanvas_SizeChanged"/>
+        <Canvas x:Name="MainCanvas" Margin="50,50,50,50" SizeChanged="MainCanvas_SizeChanged"/>
     </DockPanel>
 </Controls:MetroWindow>
